<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".fragments.ProfileFragment">

    <FrameLayout
        android:id="@+id/add_profile_image_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image_view"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="bottom|center_horizontal"
            android:src="@drawable/user" />

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/profile_image"
            android:src="@drawable/add_profile_image" />

    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:endIconDrawable="@drawable/ic_edit"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_profile_image_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_profile_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Username"
            android:text="@string/app_name_half" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bio_layout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        app:counterEnabled="true"
        app:counterMaxLength="60"
        app:endIconDrawable="@drawable/ic_edit"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_profile_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bio_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="4"
            android:hint="Bio"
            android:text="@string/you_re_all_set_to_go_hurray" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>